Added Contact Info

--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
           </div>
         </div>
       </section>
+      <section id="contact" class="content-section" aria-labelledby="contact-title">
+        <h2 id="contact-title" class="section-title">Contact</h2>
+        <div class="section-content">
+          <p class="lead">For research, collaborations, or outreach, feel free to reach out.</p>
+          <div class="contact-info">
+            <div class="contact-item"><i class="fas fa-envelope" aria-hidden="true"></i><div><h4>Email</h4><p><a href="mailto:emilia.sloan@gmail.com">emilia.sloan@gmail.com</a></p></div></div>
+            <div class="contact-item"><i class="fas fa-location-dot" aria-hidden="true"></i><div><h4>Location</h4><p>West Springfield, VA</p></div></div>
+            <div class="contact-item"><i class="fas fa-globe" aria-hidden="true"></i><div><h4>Website</h4><p><a href="https://emiliasloan.com" target="_blank" rel="noopener">emiliasloan.com</a></p></div></div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="script.js"></script>
 </body>
