About tab minor edit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="profile-image"><img src="assets/image.jpg" alt="Profile image"></div>
           <h1 class="profile-name">Emilia Sloan</h1>
           <p class="profile-title">Senior – TJHSST</p>
-          <p class="profile-title">Planatary Atmosphere Research – GMU</p>
+          <p class="profile-title">Planetary Atmosphere Research – GMU</p>
         </div>
         <nav class="nav-menu" aria-label="Primary">
           <ul>
